LUCENE-1833: Change all new Number() ctors to Number.valueOf()
git-svn-id: https://svn.apache.org/repos/asf/lucene/java/trunk@821186 13f79535-47bb-0310-9956-ffa450edef68